statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myapp-statefulset
spec:
  serviceName: "myapp-service"
  replicas: 3
  selector:
    matchLabels:
      app: mydbapp
  template:
    metadata:
      labels:
        app: mydbapp
    spec:
      containers:
      - name: mydb-container
        image: kumar49/maindbproject:v1
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: myapp-pvc
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: myapp-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
