app-service.yml
[200~---
apiVersion: v1
kind: Service
metadata:
    name: myapp-service
    spec:
      type: ClusterIP
      selector:
          app: myapp
          ports:
            - protocol: TCP
              port: 80
                targetPort: 80
