net-pol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: myapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
                matchLabels:
                  app.kubernetes.io/metadata.component: controller
      ports:
        - protocol: TCP
          port: 80
        
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mydbapp
      ports:
        - protocol: TCP
          port: 3306

    - to:
        - namespaceSelector:
            matchLabels:
             kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
